--- a/tips.html
+++ b/tips.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Советы по выбору породы в зависимости от образа жизни</title>
-    <link rel="shortcut icon" href="puppy.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-</head>
+    <link rel="icon" type="image/png" href="puppy.png" />
+    
+    <link 
+        rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
+    />
+  </head>
 
-<body class="has-background-light">
+  <body class="has-background-light">
     <style>
-        h1 {
-            text-align: center;
-        }
+      h1 {
+        text-align: center;
+      }
     </style>
     <style>
-        .marginauto {
-            margin: 10px auto 20px;
-            display: block;
-        }
+      .marginauto {
+        margin: 10px auto 20px;
+        display: block;
+      }
     </style>
 
-    <div class="container">
-
-        <div class="content">
-            <br>
-            <a href="index.html" target="_blank"><button class="button is-dark">Вернуться назад</button></a>
-            <h1>Советы по выбору породы в зависимости от образа жизни</h1>
+    <div class="container" style="padding-bottom: 40px">
+      <div class="content">
+        <br />
+        <a href="index.html" target="_blank"><button class="button is-dark">Вернуться назад</button></a>
+        <h1>Советы по выбору породы в зависимости от образа жизни</h1>
+      </div>
+      <div class="box">
+        <div class="info">
+          <img 
+              class="marginauto" 
+              src="./kak-vybrat-sobaku.png" 
+              alt="Собаки" 
+              width="1000" 
+          />
         </div>
-        <div class="box">
-            <div class="info">
-                <img class="marginauto" src="kak-vybrat-sobaku.png" alt="Собаки" width="1000" />
-            </div>
-            <br>
+        <br />
 
-            <p>Выбор породы собаки зависит от вашего образа жизни и предпочтений.</p>
-            <br>
-            <p><strong>Вот несколько советов:</strong></p>
-            <ol>
-                <li> Лабрадор-ретривер подходит для семей с детьми, активных людей и тех, кто ищет дружелюбную и умную
-                    собаку.</li>
-                <li>Немецкая овчарка - отличный выбор для опытных владельцев, желающих иметь верного и обучаемого
-                    компаньона.</li>
-                <li>Золотистый ретривер идеален для семей с детьми, любителей активного отдыха и тех, кто ищет
-                    преданного и дружелюбного друга.</li>
-            </ol>
-            <br>
-            <p>При выборе породы учитывайте свой образ жизни, уровень активности и готовность уделять время воспитанию и
-                обучению собаки.</p>
-        </div>
-
+        <p>
+          Выбор породы собаки зависит от вашего образа жизни и предпочтений.
+        </p>
+        <br />
+        <p><strong>Вот несколько советов:</strong></p>
+        <ol style="padding: 20px">
+          <li>
+            Лабрадор-ретривер подходит для семей с детьми, активных людей и тех, кто ищет дружелюбную и умную собаку.
+          </li>
+          <li>
+            Немецкая овчарка - отличный выбор для опытных владельцев, желающих иметь верного и обучаемого компаньона.
+          </li>
+          <li>
+            Золотистый ретривер идеален для семей с детьми, любителей активного отдыха и тех, кто ищет преданного и дружелюбного друга.
+          </li>
+        </ol>
+        <br />
+        <p>
+          При выборе породы учитывайте свой образ жизни, уровень активности и готовность уделять время воспитанию и обучению собаки.
+        </p>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
