--- a/characteristics.html
+++ b/characteristics.html
@@ -1,151 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Характеристики, плюсы и минусы каждой породы</title>
-    <link rel="shortcut icon" href="puppy.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-</head>
-
-<body class="has-background-light">
+    <link rel="icon" href="puppy.png" type="image/png" />
+    <link 
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css" 
+    />
     <style>
-        h1 {
-            text-align: center;
-        }
+      h1 {
+        text-align: center;
+      }
     </style>
-    <div class="container">
+  </head>
+
+  <body class="has-background-light">
+    <div class="container" style="padding-bottom: 40px">
+      <div class="content">
+        <br />
+        <a href="./index.html" target="_blank"><button class="button is-dark">Вернуться назад</button></a>
+        <h1>Характеристики, плюсы и минусы каждой породы</h1>
+      </div>
+        
+      <div class="box">
         <div class="content">
-            <br>
-            <a href="index.html" target="_blank"><button class="button is-dark">Вернуться назад</button></a>
-            <h1>Характеристики, плюсы и минусы каждой породы</h1>
+          <h3>Лабрадор-ретривер</h3>
         </div>
-
-        <div class="box">
-            <div class="content">
-                <h3>Лабрадор-ретривер</h3>
-            </div>
-            <div class="info">
-                <img src="labrador2.jpg" alt="Лабрадор-ретривер" width="700" />
-            </div>
-            <br>
-            <p>Лабрадор-ретривер — популярная порода собак, известная своим дружелюбием, интеллектом и преданностью. Вот
-                основные характеристики, плюсы и минусы этой породы.</p>
-            <br>
-            <p><strong>Характеристики:</strong></p>
-            <ul>
-                <li>Рост: кобели — 56–57 см, суки — 55–56 см.</li>
-                <li>Вес: кобели — 29–30 кг, суки — 27–29 кг.</li>
-                <li>Продолжительность жизни: 10–12 лет.</li>
-                <li>Цена: 50–100 тысяч рублей.</li>
-            </ul>
-            <br>
-            <p><strong>Плюсы:</strong></p>
-            <ul>
-                <li>Дружелюбие и доброта: лабрадоры хорошо ладят с людьми и другими животными.</li>
-                <li>Преданность и общительность: лабрадоры хотят участвовать во всех семейных мероприятиях.</li>
-                <li>Высокий интеллект: лабрадоры легко обучаются и выполняют различные команды.</li>
-                <li>Активность и энергичность: лабрадоры нуждаются в регулярных физических нагрузках и играх.</li>
-            </ul>
-            <br>
-            <p><strong>Минусы:</strong></p>
-            <ul>
-                <li>Потребность в общении: лабрадоры не переносят одиночества и нуждаются в постоянном внимании хозяев.
-                </li>
-                <li>Чрезмерная социальность: лабрадоры могут быть навязчивыми и требовать постоянного внимания от своих
-                    хозяев.</li>
-                <li>Необходимость в дрессировке: лабрадоры могут проявлять упрямство и непослушание, поэтому им
-                    требуется правильное воспитание и обучение.</li>
-                <li>Потребность в уходе: лабрадоры линяют и требуют регулярного ухода за шерстью.</li>
-            </ul>
+        <div class="info">
+          <img src="./labrador2.jpg" alt="Лабрадор-ретривер" width="700" />
         </div>
+        <br />
+        <p>
+          Лабрадор-ретривер — популярная порода собак, известная своим дружелюбием, интеллектом и преданностью. Вот основные характеристики, плюсы и минусы этой породы.
+        </p>
+        <br />
+        <p><strong>Характеристики:</strong></p>
+        <ul>
+          <li>Рост: кобели — 56–57 см, суки — 55–56 см.</li>
+          <li>Вес: кобели — 29–30 кг, суки — 27–29 кг.</li>
+          <li>Продолжительность жизни: 10–12 лет.</li>
+          <li>Цена: 50–100 тысяч рублей.</li>
+        </ul>
+        <br />
+        <p><strong>Плюсы:</strong></p>
+        <ul>
+          <li>Дружелюбие и доброта: лабрадоры хорошо ладят с людьми и другими животными.</li>
+          <li>Преданность и общительность: лабрадоры хотят участвовать во всех семейных мероприятиях.</li>
+          <li>Высокий интеллект: лабрадоры легко обучаются и выполняют различные команды.</li>
+          <li>Активность и энергичность: лабрадоры нуждаются в регулярных физических нагрузках и играх.</li>
+        </ul>
+        <br />
+        <p><strong>Минусы:</strong></p>
+        <ul>
+          <li>Потребность в общении: лабрадоры не переносят одиночества и нуждаются в постоянном внимании хозяев.</li>
+          <li>Чрезмерная социальность: лабрадоры могут быть навязчивыми и требовать постоянного внимания от своих хозяев.</li>
+          <li>Необходимость в дрессировке: лабрадоры могут проявлять упрямство и непослушание, поэтому им требуется правильное воспитание и обучение.</li>
+          <li>Потребность в уходе: лабрадоры линяют и требуют регулярного ухода за шерстью.</li>
+        </ul>
+      </div>
 
-        <div class="box">
-            <div class="content">
-                <h3>Немецкая овчарка</h3>
-            </div>
-            <div class="info">
-                <img src="ovcharka2.jpg" alt="Немецкая овчарка" width="700" />
-            </div>
-            <br>
-            <p>Немецкая овчарка — одна из самых известных и древних пород собак. Эта порода отличается хорошими
-                охранными качествами, умом и верностью. Вот некоторые характеристики, плюсы и минусы породы немецкая
-                овчарка.</p>
-            <br>
-            <p><strong>Характеристики:</strong></p>
-            <ul>
-                <li>Рост: 55–65 см.</li>
-                <li>Вес: 22–40 кг.</li>
-                <li>Продолжительность жизни: 10–14 лет.</li>
-                <li>Шерсть: короткая, жёсткая, густая.</li>
-            </ul>
-            <br>
-            <p><strong>Плюсы:</strong></p>
-            <ul>
-                <li>Ум и обучаемость: немецкие овчарки легко обучаются новым командам и навыкам.</li>
-                <li>Верность: немецкие овчарки очень преданы своим хозяевам и всегда готовы защитить их.</li>
-                <li>Охранные качества: немецкие овчарки отличные сторожевые собаки и хорошо справляются с охраной
-                    территории.</li>
-                <li>Энергичность: немецкие овчарки нуждаются в физической активности и любят играть.</li>
-            </ul>
-            <br>
-            <p><strong>Минусы:</strong></p>
-            <ul>
-                <li>Необходимость дрессировки: немецкие овчарки нуждаются в правильном воспитании и дрессировке, чтобы
-                    избежать проблем с поведением.
-                </li>
-                <li>Потребность в физических нагрузках: немецкие овчарки нуждаются в достаточном количестве упражнений и
-                    активности для поддержания здоровья и формы.</li>
-                <li>Уход за шерстью: немецкие овчарки с короткой шерстью нуждаются в минимальном уходе, но
-                    длинношёрстные требуют более тщательного ухода.</li>
-                <li>Здоровье: немецкие овчарки могут быть подвержены некоторым генетическим заболеваниям, таким как
-                    дисплазия тазобедренного сустава и проблемы со зрением.</li>
-            </ul>
+      <div class="box">
+        <div class="content">
+          <h3>Немецкая овчарка</h3>
         </div>
-
-        <div class="box">
-            <div class="content">
-                <h3>Золотистый ретривер</h3>
-            </div>
-            <div class="info">
-                <img src="retriver2.jpg" alt="Золотистый ретривер" width="700" />
-            </div>
-            <br>
-            <p>Золотистый ретривер — это порода собак, известная своим дружелюбием, интеллектом и обучаемостью.Вот
-                основные характеристики, плюсы и минусы этой породы.</p>
-            <br>
-            <p><strong>Характеристики:</strong></p>
-            <ul>
-                <li>Рост: сука — 50–56 см, кобель — 56–60 см.</li>
-                <li>Вес: сука — 25–37 кг, кобель — 27–41 кг.</li>
-                <li>Продолжительность жизни: 12–13 лет.</li>
-                <li>Шерсть: прямая или волнистая с водонепроницаемым подшёрстком.</li>
-            </ul>
-            <br>
-            <p><strong>Плюсы:</strong></p>
-            <ul>
-                <li>Дружелюбный характер: золотистые ретриверы хорошо ладят с людьми и другими собаками.</li>
-                <li>Ум и обучаемость: они легко поддаются дрессировке и могут выполнять различные команды и поручения.
-                </li>
-                <li>Отсутствие агрессии: золотистые ретриверы не представляют опасности для детей и других животных.
-                </li>
-                <li>Любят быть в центре внимания: они открытые и общительные собаки.</li>
-            </ul>
-            <br>
-            <p><strong>Минусы:</strong></p>
-            <ul>
-                <li>Зависимость от людей: золотистые ретриверы плохо переносят одиночество и изоляцию, поэтому подходят
-                    для семей с детьми и домоседов.
-                </li>
-                <li>Потребность в уходе: эти собаки сильно линяют два раза в год, что требует регулярного ухода за
-                    шерстью.</li>
-                <li>Необходимость активности: золотистые ретриверы нуждаются в регулярных прогулках и физической
-                    активности для поддержания здоровья и благополучия.</li>
-            </ul>
+        <div class="info">
+          <img src="./ovcharka2.jpg" alt="Немецкая овчарка" width="700" />
         </div>
+        <br />
+        <p>
+          Немецкая овчарка — одна из самых известных и древних пород собак. Эта порода отличается хорошими охранными качествами, умом и верностью. Вот некоторые характеристики, плюсы и минусы породы немецкая овчарка.
+        </p>
+        <br />
+        <p><strong>Характеристики:</strong></p>
+        <ul>
+          <li>Рост: 55–65 см.</li>
+          <li>Вес: 22–40 кг.</li>
+          <li>Продолжительность жизни: 10–14 лет.</li>
+          <li>Шерсть: короткая, жёсткая, густая.</li>
+        </ul>
+        <br />
+        <p><strong>Плюсы:</strong></p>
+        <ul>
+          <li>Ум и обучаемость: немецкие овчарки легко обучаются новым командам и навыкам.</li>
+          <li>Верность: немецкие овчарки очень преданы своим хозяевам и всегда готовы защитить их.</li>
+          <li>Охранные качества: немецкие овчарки отличные сторожевые собаки и хорошо справляются с охраной территории.</li>
+          <li>Энергичность: немецкие овчарки нуждаются в физической активности и любят играть.</li>
+        </ul>
+        <br />
+        <p><strong>Минусы:</strong></p>
+        <ul>
+          <li>Необходимость дрессировки: немецкие овчарки нуждаются в правильном воспитании и дрессировке, чтобы избежать проблем с поведением.</li>
+          <li>Потребность в физических нагрузках: немецкие овчарки нуждаются в достаточном количестве упражнений и активности для поддержания здоровья и формы.</li>
+          <li>Уход за шерстью: немецкие овчарки с короткой шерстью нуждаются в минимальном уходе, но длинношёрстные требуют более тщательного ухода.</li>
+          <li>Здоровье: немецкие овчарки могут быть подвержены некоторым генетическим заболеваниям, таким как дисплазия тазобедренного сустава и проблемы со зрением.</li>
+        </ul>
+      </div>
 
+      <div class="box">
+        <div class="content">
+          <h3>Золотистый ретривер</h3>
+        </div>
+        <div class="info">
+          <img src="./retriver2.jpg" alt="Золотистый ретривер" width="700" />
+        </div>
+        <br />
+        <p>
+          Золотистый ретривер — это порода собак, известная своим дружелюбием, интеллектом и обучаемостью.Вот основные характеристики, плюсы и минусы этой породы.
+        </p>
+        <br />
+        <p><strong>Характеристики:</strong></p>
+        <ul>
+          <li>Рост: сука — 50–56 см, кобель — 56–60 см.</li>
+          <li>Вес: сука — 25–37 кг, кобель — 27–41 кг.</li>
+          <li>Продолжительность жизни: 12–13 лет.</li>
+          <li>Шерсть: прямая или волнистая с водонепроницаемым подшёрстком.</li>
+        </ul>
+        <br />
+        <p><strong>Плюсы:</strong></p>
+        <ul>
+          <li>Дружелюбный характер: золотистые ретриверы хорошо ладят с людьми и другими собаками.</li>
+          <li>Ум и обучаемость: они легко поддаются дрессировке и могут выполнять различные команды и поручения.</li>
+          <li>Отсутствие агрессии: золотистые ретриверы не представляют опасности для детей и других животных.</li>
+          <li>Любят быть в центре внимания: они открытые и общительные собаки.</li>
+        </ul>
+        <br />
+        <p><strong>Минусы:</strong></p>
+        <ul>
+          <li>Зависимость от людей: золотистые ретриверы плохо переносят одиночество и изоляцию, поэтому подходят для семей с детьми и домоседов.</li>
+          <li>Потребность в уходе: эти собаки сильно линяют два раза в год, что требует регулярного ухода за шерстью.</li>
+          <li>Необходимость активности: золотистые ретриверы нуждаются в регулярных прогулках и физической активности для поддержания здоровья и благополучия.</li>
+        </ul>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
